Updated css so that h3 is no longer aligned to center

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -267,7 +267,7 @@ h2 {
 }
 
 h3 {
-	text-align: center;
+	/* text-align: center; */
 }
 
 .center {
